examples/misc/error/compilation/eval_wdt_list.bfr
codegen [
  **let l = 1 :: 2 in $
]